# Darwinian

./: .env.example  .gitignore  CLAUDE.md  INTERVIEW_QA.md  PHASE1_V2_DESIGN.md  PROGRESS.md  PROJECT_DETAIL.md  README.md  TEST.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: auto_seed_pipeline.py  diff_quantskip_seed.py  run_research.py
src/darwinian/: __init__.py  state.py
src/darwinian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/darwinian/agents/: __init__.py  bottleneck_miner.py  code_architect.py  contradiction_detector.py  diagnostician.py  feasibility_challenger.py  hook_writer.py  hypothesis_generator.py  mechanism_alignment_checker.py  novelty_booster.py  phase_a_orchestrator.py  phenomenon_miner.py  poison_generator.py  proposal_debater.py  (+4 more)
tests/: test_state.py
tests/test_agents/: test_bottleneck_miner.py  test_contradiction_detector.py  test_feasibility_challenger.py  test_hook_writer.py  test_hypothesis_generator.py  test_mechanism_alignment_checker.py  test_novelty_booster.py  test_phase_a_orchestrator.py  test_phenomenon_miner.py  test_proposal_debater.py  test_proposal_elaborator.py  test_proposal_tournament.py  test_theoretical_critic.py
tests/test_graphs/: test_routing.py
tests/test_tools/: test_arxiv_latex_fetcher.py  test_arxiv_search.py  test_claim_spotcheck.py  test_json_parser.py  test_knowledge_graph.py  test_paper_evidence_extractor.py  test_perturbation_strategies.py  test_seed_renderer.py  test_semantic_scholar.py  test_similarity.py
tests/test_utils/: test_venue_deadlines.py
(+22 files in other folders)
